--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,7 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+#Obj-c interop
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.enableCInteropCommonization.nawarn=true
